calculate accrual. break
