# docs/accrual/swagger.json
@@ -447,28 +447,34 @@
                 }
             }
         },
-        "Good": {
-            "type": "object",
-            "properties": {
-                "description": {
-                    "type": "string"
-                },
-                "price": {
-                    "type": "number"
-                }
-            }
-        },
         "Order": {
             "type": "object",
             "properties": {
-                "goods": {
-                    "type": "array",
-                    "items": {
-                        "$ref": "#/definitions/Good"
-                    }
+                "accrual": {
+                    "type": "number"
                 },
-                "order": {
-                    "type": "string"
+                "is_withdrawn": {
+                    "type": "boolean"
+                },
+                "number": {
+                    "type": "string",
+                    "example": "12345678903"
+                },
+                "processed_at": {
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2020-12-10T15:15:45+03:00"
+                },
+                "status": {
+                    "$ref": "#/definitions/storagedefault.OrderStatus"
+                },
+                "sum": {
+                    "type": "number"
+                },
+                "uploaded_at": {
+                    "type": "string",
+                    "format": "date-time",
+                    "example": "2020-12-10T15:15:45+03:00"
                 }
             }
         },
@@ -516,12 +522,14 @@
             "type": "string",
             "enum": [
                 "NEW",
+                "REGISTERED",
                 "PROCESSING",
                 "INVALID",
                 "PROCESSED"
             ],
             "x-enum-varnames": [
                 "StatusNew",
+                "StatusRegistered",
                 "StatusProcessing",
                 "StatusInvalid",
                 "StatusProcessed"
