# internal/storage/default/models.go
@@ -4,6 +4,7 @@ type OrderStatus string
 
 const (
 	StatusNew        OrderStatus = "NEW"
+	StatusRegistered OrderStatus = "REGISTERED"
 	StatusProcessing OrderStatus = "PROCESSING"
 	StatusInvalid    OrderStatus = "INVALID"
 	StatusProcessed  OrderStatus = "PROCESSED"
